--- a/strategiesstyle.css
+++ b/strategiesstyle.css
@@ -141,6 +141,7 @@ header {
     border-radius: 25px;
     margin: 25px;
     height: fit-content;
+    padding-left: 10%;
 }
 
 section{
